# DM2025-Lab1-Exercise

./: .gitattributes  .gitignore  .python-version  DM2025-Lab1-Homework.ipynb  DM2025-Lab1-Master.ipynb  Git Intro & How to hand your homework.ipynb  README.md  freq_patterns_alt_atheism_minSup9.txt  freq_patterns_comp_graphics_minSup9.txt  freq_patterns_sci_med_minSup9.txt  freq_patterns_soc_religion_minSup9.txt  main.py  pyproject.toml  td_freq_db_alt_atheism.csv  td_freq_db_comp_graphics.csv  td_freq_db_sci_med.csv  td_freq_db_soc_religion_christian.csv
newdataset/: Reddit-stock-sentiment.csv
