[project]
name = "dm2025-lab1-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pami>=2025.7.3.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]
